# scalable

./: .buildinfo  .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  DISCLAIMER.md  Dockerfile  LICENSE.md  README.md  bootstrap.sh  cache_hash.html  caching.html  container.html  demo.html  functions.html  genindex.html  getting_started.html  helps_demo.html  index.html  issues.html  objects.inv  pyproject.toml  requirements.txt  rpy2.html  scalable_bootstrap.sh  search.html  searchindex.js  setup.py  workers.html
.doctrees/: cache_hash.doctree  caching.doctree  container.doctree  demo.doctree  environment.pickle  functions.doctree  getting_started.doctree  helps_demo.doctree  index.doctree  issues.doctree  rpy2.doctree  workers.doctree
.github/workflows/: pages.yml  tests.yml
_sources/: cache_hash.rst.txt  demo.rst.txt  issues.rst.txt
communicator/src/: communicator.go
docs/: advising.rst  ai_assistants.rst  artifacts.rst  caching.rst  cloud.rst  conf.py  container.rst  cost.rst  demo.rst  emulation.rst  functions.rst  getting_started.rst  helps_demo.rst  how_to_contribute.rst  index.rst  issues.rst  kubernetes.rst  license.rst  manifest.rst  ml.rst  overlays.rst  providers.rst  requirements.txt  rpy2.rst  telemetry.rst  workers.rst
docs/examples/: scalable.aws.yaml  scalable.gcam_stitches.yaml  scalable.gke.yaml  scalable.minimal.yaml  scalable.overlays.yaml
docs/tutorials/: 01_getting_started.rst  02_manifest_system.rst  03_scaling_strategies.rst  04_caching_performance.rst  05_cloud_integration.rst  06_telemetry.rst  07_error_handling.rst  08_kubernetes.rst  09_ml_emulation.rst  10_ai_composition.rst  index.rst
docs/tutorials/advanced/: index.rst
docs/tutorials/beginner/: 01_getting_started.rst  02_manifest_system.rst  03_scaling_strategies.rst  04_caching_performance.rst  05_cloud_integration.rst  06_telemetry.rst  07_error_handling.rst  08_kubernetes.rst  09_ml_emulation.rst  10_ai_composition.rst  index.rst
notebooks/: 01_getting_started.ipynb  02_manifest_system.ipynb  03_scaling_strategies.ipynb  04_caching_performance.ipynb  05_cloud_integration.ipynb  06_telemetry.ipynb  07_error_handling.ipynb  08_kubernetes.ipynb  09_ml_emulation.ipynb  10_ai_composition.ipynb  README.md
notebooks/advanced/: 01_getting_started.ipynb  02_manifest_system.ipynb  03_scaling_strategies.ipynb  06_telemetry.ipynb  07_error_handling.ipynb  09_ml_emulation.ipynb  10_ai_composition.ipynb
notebooks/beginner/: 01_getting_started.ipynb  02_manifest_system.ipynb  03_scaling_strategies.ipynb  04_caching_performance.ipynb  05_cloud_integration.ipynb  06_telemetry.ipynb  07_error_handling.ipynb  08_kubernetes.ipynb  09_ml_emulation.ipynb  10_ai_composition.ipynb  README.md
plans/: v2.0.0_phase5_plan.md
scalable/: Dockerfile  __init__.py  caching.py  client.py  common.py  core.py  scalable_bootstrap.sh  slurm.py  support.py  utilities.py
scalable/advising/: __init__.py  resources.py
scalable/ai/: __init__.py  backend.py  component_onboarding.py  heuristics.py  log_diagnosis.py  manifest_migrate.py  plan_explain.py  workflow_compose.py
scalable/ai/agents/: __init__.py  base.py  compose_agent.py  coordination.py  diagnosis_agent.py  explanation_agent.py  migration_agent.py  models.py  onboarding_agent.py  providers.py  tools.py  validators.py
scalable/ai/prompts/: __init__.py  compose.py  diagnose.py  explain.py  migrate.py  onboarding.py
scalable/artifacts/: __init__.py  base.py  cache.py  factory.py  fsspec_store.py  local.py
scalable/cli/: __init__.py  cmd_advise.py  cmd_compose.py  cmd_diagnose.py  cmd_explain.py  cmd_init_component.py  cmd_migrate.py  cmd_plan.py  cmd_report.py  cmd_run.py  cmd_validate.py  main.py
scalable/costing/: __init__.py  estimate.py
scalable/emulation/: __init__.py  active_learning.py  decorator.py  dispatch.py  registry.py  surrogate.py  uncertainty.py
scalable/manifest/: __init__.py  adapter.py  errors.py  overlays.py  parser.py  schema.py  validate.py
scalable/ml/: __init__.py  adaptive_scaler.py  features.py  learned_advisor.py  models.py  tuning.py  validation.py
scalable/planning/: __init__.py  dryrun.py
scalable/providers/: __init__.py  base.py  kubernetes.py  local.py  registry.py  slurm.py
scalable/providers/cloud/: __init__.py  aws.py  base.py  cost_tables.py  gcp.py
scalable/session/: __init__.py  session.py
scalable/telemetry/: __init__.py  collectors.py  events.py  runtime.py  store.py
tests/: __init__.py  conftest.py
tests/integration/: test_local_provider_end_to_end.py  test_session_telemetry_local.py
tests/unit/: __init__.py  test_ai_agents.py  test_ai_backend.py  test_ai_compose.py  test_ai_diagnosis.py  test_ai_explain.py  test_ai_heuristics.py  test_ai_migrate.py  test_ai_onboarding.py  test_artifacts.py  test_caching.py  test_cli_phase4.py  test_cli_plan.py  test_cli_report.py  test_cli_run.py  test_cli_validate.py  test_cloud_cost_tables.py  test_cloud_kubernetes_providers.py  test_common_settings.py  test_core_scale.py  test_costing.py  test_emulation.py  test_manifest_adapter.py  test_manifest_overlays.py  test_manifest_parser.py  test_manifest_validate.py  test_ml_adaptive_scaler.py  test_ml_features.py  test_ml_models.py  test_modelconfig_deprecation.py  test_phase5_telemetry_cli.py  test_planning_dryrun.py  test_providers_base_registry.py  test_providers_local.py  test_providers_slurm.py  test_public_api_exports.py  test_resource_advisor.py  test_session.py  test_session_plan_objectives.py  test_settings_phase3.py  (+5 more)
